--- a/ClientGUI/AvailableServices.xaml
+++ b/ClientGUI/AvailableServices.xaml
@@ -5,9 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientGUI"
         mc:Ignorable="d"
-        Title="AvailableServices" Height="400" Width="300">
+        Title="AvailableServices" Height="420" Width="320">
     <Grid>
-        <TextBlock x:Name="Namet" Margin="73,84,140,276" Text="Name" />
-        <Button Content="Back" Margin="150,288,42,0" Click="Back_Click" Height="36" VerticalAlignment="Top"/>
+        <TextBlock x:Name="Namet" Margin="27,350,186,10" Text="Name" />
+        <ListBox x:Name="list" Margin="42,28,42,89"></ListBox>
+        <Button Content="Back" Margin="150,340,42,0" Click="Back_Click" Height="36" VerticalAlignment="Top"/>
     </Grid>
 </Window>
