--- a/ClientGUI/Login.xaml
+++ b/ClientGUI/Login.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="Login" Height="400" Width="300">
 
-    <Grid Margin="12,108,12,64">
+    <Grid Margin="12,108,12,64" RenderTransformOrigin="0.405,0.067" HorizontalAlignment="Center" VerticalAlignment="Center">
         <TextBlock Margin="0,0,213,119" Text="Name" />
         <TextBox x:Name="NameBox" Margin="67,0,6,0" Height="30" VerticalAlignment="Top" />
         <TextBox x:Name="PasswordBox" Margin="68,53,6,0" RenderTransformOrigin="0.5,0.5" Height="30" VerticalAlignment="Top" />
