--- a/ClientGUI/Dashboard.xaml
+++ b/ClientGUI/Dashboard.xaml
@@ -15,6 +15,7 @@
         <Button Content="Log Out" Margin="158,113,34,0" Click="Logout_Click" Height="36" VerticalAlignment="Top"/>
 
         <ProgressBar x:Name="progress"  Minimum="0" Maximum="100"  Margin="37,69,37,0" RenderTransformOrigin="0.5,0.5" Height="20" VerticalAlignment="Top"  />
+        <Button Content="Search Services" Margin="40,28,108,0" Click="SearchServicesButton_Click" Height="36" VerticalAlignment="Top"/>
     </Grid>
 
 </Window>
