--- a/ClientGUI/TestService.xaml
+++ b/ClientGUI/TestService.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientGUI"
         mc:Ignorable="d"
-        Title="TestService" Height="420" Width="320">
+        Title="TestService" Height="520" Width="320">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="16,28,0,0" TextWrapping="Wrap" Text="Service Details :" VerticalAlignment="Top"/>
         <!--<TextBox Name="ServiceNameBox" Height="30" Margin="18,64,19,0" TextWrapping="Wrap" Text="Service Name" VerticalAlignment="Top"/>
@@ -17,7 +17,8 @@
         <TextBlock Name="ServiceApiEndpointBox" HorizontalAlignment="Left" Margin="16,95,0,0" TextWrapping="Wrap" Text="3" VerticalAlignment="Top"/>
         <TextBlock Name="ServiceOperandTypeBox" HorizontalAlignment="Left" Margin="16,116,0,0" TextWrapping="Wrap" Text="4" VerticalAlignment="Top"/>
 
-        <Button Name="TestServiceButton" Content="Test Service" Margin="18,342,21,0" VerticalAlignment="Top" Height="30" Click="TestServiceButton_Click"/>
+        <Button Name="TestServiceButton" Content="Test Service" Margin="16,452,23,0" VerticalAlignment="Top" Height="30" Click="TestServiceButton_Click"/>
+        <ProgressBar x:Name="progress"  Minimum="0" Maximum="100"  Margin="19,413,26,0" RenderTransformOrigin="0.5,0.5" Height="20"  VerticalAlignment="Top"  />
         <GroupBox Header="Input Numbers" Height="150" Margin="18,141,19,0" VerticalAlignment="Top">
             <GroupBox.Resources>
                 <Style TargetType='TextBox'>
@@ -29,7 +30,7 @@
                 <StackPanel Name="numStackPanel"/>
             </ScrollViewer>
         </GroupBox>
-        <TextBlock Name="AnswerTextBlock" HorizontalAlignment="Left" Margin="18,302,0,0" TextWrapping="Wrap" Text="" FontSize="20" VerticalAlignment="Top" Width="275" Height="30"/>
+        <TextBlock Name="AnswerTextBlock" HorizontalAlignment="Left" Margin="19,369,0,0" TextWrapping="Wrap" Text="" FontSize="20" VerticalAlignment="Top" Width="275" Height="30"/>
         <!--<ListView HorizontalAlignment="Left" Height="72" Margin="18,213,0,0" VerticalAlignment="Top" Width="275">
             <ListView.ItemTemplate>
                 <DataTemplate>
