--- a/ClientGUI/AvailableServices.xaml
+++ b/ClientGUI/AvailableServices.xaml
@@ -5,10 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ClientGUI"
         mc:Ignorable="d"
-        Title="AvailableServices" Height="420" Width="320">
-    <Grid  RenderTransformOrigin="0.405,0.067" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <TextBlock x:Name="Namet" Margin="27,350,186,10" />
-        <ListBox x:Name="list" Margin="27,28,27,39"></ListBox>
-        <ProgressBar x:Name="progress"  Minimum="0" Maximum="100"  Margin="16,3,16,0" RenderTransformOrigin="0.5,0.5" Height="20" VerticalAlignment="Top"  />
+        Title="AvailableServices" Height="520" Width="420">
+    <Grid  RenderTransformOrigin="0.405,0.067" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,32,0,0" Height="450" Width="342">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="357*"/>
+            <RowDefinition Height="19*"/>
+        </Grid.RowDefinitions>
+        <TextBlock x:Name="Namet" Margin="29,350,184,10" Grid.RowSpan="2" />
+        <ListBox Name="list" Margin="0,28,0,20"></ListBox>
+        <ProgressBar x:Name="progress"  Minimum="0" Maximum="100"  Margin="18,3,14,0" RenderTransformOrigin="0.5,0.5" Height="20" VerticalAlignment="Top"  />
+        <Button x:Name="ServiceSelectButton" Content="Select a Service" Margin="16,412,20,0" VerticalAlignment="Top" Height="31" Click="ServiceSelectButton_Click" Grid.RowSpan="2"/>
     </Grid>
 </Window>
